@@ -88,7 +88,7 @@ class Documentation_Document_Children_Widget extends WP_Widget {
 // 			add_action( 'wp_print_styles', array( __CLASS__, '_wp_print_styles' ) );
 // 		}
 		if ( !has_action( 'comment_post', array( __CLASS__, 'cache_delete' ) ) ) {
-			add_action( 'comment_post', array(__CLASS__, 'cache_delete' ) );
+			add_action( 'comment_post', array( __CLASS__, 'cache_delete' ) );
 		}
 		if ( !has_action( 'transition_comment_status', array( __CLASS__, 'cache_delete' ) ) ) {
 			add_action( 'transition_comment_status', array( __CLASS__, 'cache_delete' ) );
@@ -184,7 +184,7 @@ class Documentation_Document_Children_Widget extends WP_Widget {
 		$child_of = $new_instance['child_of'];
 		if ( empty( $child_of ) ) {
 			unset( $settings['child_of'] );
-		} else if ( ("[current]" == $child_of ) || ("{current}" == $child_of ) )  {
+		} else if ( ( "[current]" == $child_of ) || ( "{current}" == $child_of ) )  {
 			$settings['child_of'] = "{current}";
 		} else if ( $post = get_post( $child_of ) && ( $post !== null ) ) { 
 			$settings['child_of'] = $child_of;
